--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8278403724706078"
+     crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="style.css">
 
@@ -64,8 +67,24 @@
     </div>
 
 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8278403724706078"
+     crossorigin="anonymous"></script>
+<!-- Conversor de Moedas -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-8278403724706078"
+     data-ad-slot="6341236398"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
 
     <script src="./conversor.js"></script>
+
+
 
 
 </body>
