--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
     <div>
         <div id="head">
-            <h1>MS1 - Conversor de Moedas</h1>
+            <h1>Conversor de Moedas</h1>
         </div>
 
         <div id="master-box">
